--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="profile.jpg" alt="Profile picture" class="profile-pic">
+    <img src="de06eec2-a4c8-4e6c-b2b7-6b1dcd61b7e9.jpeg" alt="Profile picture" class="profile-pic">
     <h1>Yamaç Özcan</h1>
     <nav>
       <a href="index.html">home</a> |
