--- a/resources.html
+++ b/resources.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Yamaç Özcan</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <nav>
+      <a href="index.html">home</a> |
+      <a href="projects.html">projects</a> |
+      <a href="resources.html">resources</a>
+    </nav>
 
+    <h2>Resources</h2>
+    <p>
+      This is the page where I will be talking about my experience with github and how I learned to use it.
+    </p>
+  </div>
+</body>
+</html>
