--- a/resources.html
+++ b/resources.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yamaç Özcan</title>
+    <title>Yamaç Özcan</title>
   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <img src="de06eec2-a4c8-4e6c-b2b7-6b1dcd61b7e9.jpeg" alt="Profile picture" class="profile-pic">
+    <h1>Yamaç Özcan</h1>
 </head>
 <body>
   <div class="container">
