--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
     <h1>Yamaç Özcan</h1>
     <nav>
       <a href="index.html">home</a> |
-      <a href="projects.html">projects</a> |
+      <a href="projects/index.html">projects</a>
       <a href="resources.html">resources</a>
     </nav>
 
