--- a/resources.html
+++ b/resources.html
@@ -12,7 +12,7 @@
   <div class="container">
     <nav>
       <a href="index.html">home</a> |
-      <a href="projects.html">projects</a> |
+      <a href="projects/index.html">projects</a>
       <a href="resources.html">resources</a>
     </nav>
 
