--- a/projects/index.html
+++ b/projects/index.html
@@ -15,9 +15,15 @@
       <a href="resources.html">resources</a>
     </nav>
 
-    <h2>My Projects</h2>
-    <p>
-    </p>
+    <div class="project-grid">
+      <a class="project-card" href="tictactoe.html">
+        <img src="../assets/tictactoe.png" alt="Scratch Tic Tac Toe" loading="lazy" />
+        <div class="project-caption">
+          <h3>Scratch Tic Tac Toe</h3>
+          <p>Turn switching, win detection, auto reset.</p>
+        </div>
+      </a>
+    </div>
   </div>
 </body>
 </html>
