--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -9,8 +9,8 @@
   <div class="container">
     <nav>
       <a href="../index.html">home</a> |
-      <a href="./">projects</a> |
-      <a href="../resources.html">resources</a>
+      <a href="projects/index.html">projects</a> |
+      <a href="../resources.html">resources</a> |
     </nav>
 
     <h1>Scratch Tic Tac Toe</h1>
