--- a/projects/index.html
+++ b/projects/index.html
@@ -11,8 +11,8 @@
     <h1>Yamaç Özcan</h1>
     <nav>
       <a href="index.html">home</a> |
-      <a href="projects/index.html">projects</a>
-      <a href="resources.html">resources</a>
+      <a href="projects/index.html">projects</a> |
+      <a href="resources.html">resources</a> |
     </nav>
 
     <div class="project-grid">
