--- a/resources.html
+++ b/resources.html
@@ -12,8 +12,8 @@
   <div class="container">
     <nav>
       <a href="index.html">home</a> |
-      <a href="projects/index.html">projects</a>
-      <a href="resources.html">resources</a>
+      <a href="projects/index.html">projects</a> |
+      <a href="resources.html">resources</a> |
     </nav>
 
     <h2>Resources</h2>
