--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -9,7 +9,7 @@
   <div class="container">
     <nav>
       <a href="../index.html">home</a> |
-      <a href="projects/index.html">projects</a> |
+      <a href="./index.html">projects</a> |
       <a href="../resources.html">resources</a> |
     </nav>
 
