--- a/resources.html
+++ b/resources.html
@@ -9,11 +9,11 @@
   <div class="container">
     <img src="de06eec2-a4c8-4e6c-b2b7-6b1dcd61b7e9.jpeg" alt="Profile picture" class="profile-pic">
     <h1>Yamaç Özcan</h1>
-    <nav>
-      <a href="index.html">home</a> |
-      <a href="projects/index.html">projects</a> |
-      <a href="resources.html">resources</a> |
-    </nav>
+  <nav>
+  <a href="/">home</a> |
+  <a href="/projects/">projects</a> |
+  <a href="/resources.html">resources</a> |
+</nav>
 
     <h2>Resources</h2>
     <p>
