--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <div class="container">
-    <nav>
-      <a href="../index.html">home</a> |
-      <a href="./index.html">projects</a> |
-      <a href="../resources.html">resources</a> |
-    </nav>
+  <nav>
+  <a href="/">home</a> |
+  <a href="/projects/">projects</a> |
+  <a href="/resources.html">resources</a> |
+</nav>
 
     <h1>Scratch Tic Tac Toe</h1>
 
