--- a/projects/index.html
+++ b/projects/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Yamaç Özcan</title>
-  <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8" />
+  <title>Projects – Yamaç Özcan</title>
+  <!-- Always load CSS from site root -->
+  <link rel="stylesheet" href="/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <div class="container">
-    <img src="de06eec2-a4c8-4e6c-b2b7-6b1dcd61b7e9.jpeg" alt="Profile picture" class="profile-pic">
-    <h1>Yamaç Özcan</h1>
-   <nav>
-  <a href="/">home</a> |
-  <a href="/projects/">projects</a> |
-  <a href="/resources.html">resources</a> |
-</nav>
-
+    <h1>My Projects</h1>
+    <nav>
+      <a href="/">home</a> |
+      <a href="/projects/">projects</a> |
+      <a href="/resources.html">resources</a>
+    </nav>
 
     <div class="project-grid">
-      <a class="project-card" href="tictactoe.html">
-        <img src="../assets/tictactoe.png" alt="Scratch Tic Tac Toe" loading="lazy" />
+      <a class="project-card" href="/projects/tictactoe.html">
+        <img src="/assets/tictactoe.png" alt="Scratch Tic Tac Toe" loading="lazy" />
         <div class="project-caption">
           <h3>Scratch Tic Tac Toe</h3>
           <p>Turn switching, win detection, auto reset.</p>
@@ -28,3 +28,4 @@
   </div>
 </body>
 </html>
+
