--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -3,27 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <title>Scratch Tic Tac Toe – Yamaç Özcan</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <div class="container">
-  <nav>
-  <a href="/">home</a> |
-  <a href="/projects/">projects</a> |
-  <a href="/resources.html">resources</a> |
-</nav>
+    <nav>
+      <a href="/">home</a> |
+      <a href="/projects/">projects</a> |
+      <a href="/resources.html">resources</a>
+    </nav>
 
     <h1>Scratch Tic Tac Toe</h1>
 
     <img
-      src="../assets/tictactoe.png"
+      src="/assets/tictactoe.png"
       alt="Scratch Tic Tac Toe screenshot"
       style="width:100%; max-width:900px; border-radius:14px; box-shadow:0 8px 24px rgba(0,0,0,.08); display:block; margin:18px auto;"
     />
 
     <h2>Overview</h2>
     <p>
-      A Scratch Tic Tac Toe with: turn switching between X and O, win detection,
+      A Scratch Tic Tac Toe with turn switching between X and O, win detection,
       victory backdrops, and a 5-second auto reset using broadcasts.
     </p>
 
@@ -36,7 +37,7 @@
     </ul>
 
     <p>
-      <a href="./" style="display:inline-block; margin-top:20px; padding:10px 20px; background:#007acc; color:#fff; border-radius:6px; text-decoration:none;">
+      <a href="/projects/" style="display:inline-block; margin-top:20px; padding:10px 20px; background:#007acc; color:#fff; border-radius:6px; text-decoration:none;">
         ← Back to Projects
       </a>
     </p>
