--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
         <img src="/assets/tictactoe.png" alt="Scratch Tic Tac Toe" loading="lazy" />
         <div class="project-caption">
           <h3>Scratch Tic Tac Toe</h3>
-          <p>Turn switching, win detection, auto reset.</p>
+          <p>Basic project to begin AP CS P</p>
         </div>
       </a>
     </div>
