--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -24,16 +24,13 @@
 
     <h2>Overview</h2>
     <p>
-      A Scratch Tic Tac Toe with turn switching between X and O, win detection,
-      victory backdrops, and a 5-second auto reset using broadcasts.
+      With this project I aimed to create a version of tic tac toe withing scracth that can be played between two users on the same computer. 
+      It's not a very smart game and msot of the work is left to the users to do like deciding the winner, changing between X and O, etc.
     </p>
 
-    <h2>How it works</h2>
+    <h2>A video explanation</h2>
     <ul>
-      <li>Global variables: <code>X</code>, <code>O</code>, <code>Draw</code>.</li>
-      <li>Stage controller watches scores in a <code>forever</code> loop.</li>
-      <li>Broadcasts <code>HIDE_ALL</code> and <code>NEW_ROUND</code> to hide/show all squares & UI.</li>
-      <li>Each square resets costume on <code>NEW_ROUND</code>.</li>
+
     </ul>
 
     <p>
