--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -29,7 +29,22 @@
     </p>
 
     <h2>A video explanation</h2>
+<div class="video-embed">
+  <iframe
+    src="https://drive.google.com/file/d/1UNpU8URpN1Lx0834imOKewBniYje_stb/preview"
+    title="Scratch Tic Tac Toe demo (Google Drive)"
+    allow="autoplay"
+    style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+  ></iframe>
+</div>
 
+<p class="video-fallback">
+  <a href="https://drive.google.com/file/d/1UNpU8URpN1Lx0834imOKewBniYje_stb/view?usp=sharing"
+     target="_blank" rel="noopener"
+     style="display:inline-block;padding:10px 16px;background:#007acc;color:#fff;border-radius:6px;text-decoration:none;">
+    ▶ Watch the demo on Google Drive
+  </a>
+</p>
     <p>
       <a href="/projects/" style="display:inline-block; margin-top:20px; padding:10px 20px; background:#007acc; color:#fff; border-radius:6px; text-decoration:none;">
         ← Back to Projects
