--- a/documentation.html
+++ b/documentation.html
@@ -12,7 +12,7 @@
   <nav>
   <a href="/">home</a> |
   <a href="/projects/">projects</a> |
-  <a href="/resources.html">resources</a> |
+  <a href="/resources.html">documentation</a> |
 </nav>
 
     <h2>Resources</h2>
