--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <img src="de06eec2-a4c8-4e6c-b2b7-6b1dcd61b7e9.jpeg" alt="Profile picture" class="profile-pic">
     <h1>Yamaç Özcan</h1>
      <nav>
-  <a href="/">home</a> |
-  <a href="/projects/">projects</a> |
-  <a href="/resources.html">resources</a> |
+  <a href="/">Home</a> |
+  <a href="/projects/">Projects</a> |
+  <a href="/documentation.html">Documentation</a> |
 </nav>
 
     <h2>About Me</h2>
