--- a/projects/index.html
+++ b/projects/index.html
@@ -10,9 +10,9 @@
   <div class="container">
     <h1>My Projects</h1>
     <nav>
-      <a href="/">home</a> |
-      <a href="/projects/">projects</a> |
-      <a href="/resources.html">resources</a>
+  <a href="/">Home</a> |
+  <a href="/projects/">Projects</a> |
+  <a href="/documentation.html">Documentation</a> |
     </nav>
 
     <div class="project-grid">
