--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -9,9 +9,9 @@
 <body>
   <div class="container">
     <nav>
-      <a href="/">home</a> |
-      <a href="/projects/">projects</a> |
-      <a href="/resources.html">resources</a>
+  <a href="/">Home</a> |
+  <a href="/projects/">Projects</a> |
+  <a href="/documentation.html">Documentation</a> |
     </nav>
 
     <h1>Scratch Tic Tac Toe</h1>
