--- a/projects/index.html
+++ b/projects/index.html
@@ -13,6 +13,7 @@
   <a href="/">Home</a> |
   <a href="/projects/">Projects</a> |
   <a href="/documentation.html">Documentation</a> |
+  <a href="/big-ideas.html">Big Ideas</a> |
     </nav>
 
     <div class="project-grid">
