--- a/big-ideas.html
+++ b/big-ideas.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Big Ideas – Yamaç Özcan</title>
+  <link rel="stylesheet" href="/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+<body>
+  <div class="container">
+    <nav>
+  <a href="/">Home</a> |
+  <a href="/projects/">Projects</a> |
+  <a href="/documentation.html">Documentation</a> |
+  <a href="/big-ideas.html">Big Ideas</a> |
+    </nav>
 
