--- a/documentation.html
+++ b/documentation.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Yamaç Özcan</title>
-  <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-  <div class="container">
-    <img src="de06eec2-a4c8-4e6c-b2b7-6b1dcd61b7e9.jpeg" alt="Profile picture" class="profile-pic">
-    <h1>Yamaç Özcan</h1>
   <nav>
   <a href="/">Home</a> |
   <a href="/projects/">Projects</a> |
@@ -16,7 +8,7 @@
   <a href="/big-ideas.html">Big Ideas</a> |
 </nav>
 
-    <h2>Resources</h2>
+    <h2>Documentation</h2>
     <p>
       This is the page where I will be talking about my experience with github and how I learned to use it.
     </p>
