--- a/documentation.html
+++ b/documentation.html
@@ -10,7 +10,8 @@
 
     <h2>Documentation</h2>
     <p>
-      This is the page where I will be talking about my experience with github and how I learned to use it.
+      This is the page where I will be talking about my experience with github and how I learned to use it. This was my first website in github, 
+      it was quite difficult to do although with the help of youtube videos and many long conversations with chatgpt about style editing, html files etc. 
     </p>
   </div>
 </body>
