--- a/documentation.html
+++ b/documentation.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="../style.css">
 </head>
+<h1>Documentation</h1>  
 <body>
      <nav>
   <a href="/">Home</a> |
@@ -11,7 +12,7 @@
   <a href="/big-ideas.html">Big Ideas</a> |
 </nav>
 
-    <h2>Documentation</h2>
+    <h2>My experience</h2>
     <p>
       This is the page where I will be talking about my experience with github and how I learned to use it. This was my first website in github, 
       it was quite difficult to do although with the help of youtube videos and many long conversations with chatgpt about style editing, html files etc. 
