--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -52,6 +52,8 @@
       It would also be important to not have to click twice just to put Os and for the game to recognize turns. For the time being the project still needs more improvement. 
     </p>
 
+    <iframe src="https://scratch.mit.edu/projects/1212297595/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
     <p>
       <a href="/projects/" style="display:inline-block; margin-top:20px; padding:10px 20px; background:#007acc; color:#fff; border-radius:6px; text-decoration:none;">
         ← Back to Projects
