--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
       <a href="/">Home</a> |
       <a href="/projects/">Projects</a> |
       <a href="/documentation.html">Documentation</a> |
-      <a href="/big-ideas.html">Big Ideas</a> |
+      <a href="/big-ideas.html">Big Ideas</a> 
     </nav>
 
     <div class="project-grid">
@@ -22,6 +22,13 @@
         <div class="project-caption">
           <h3>Scratch Tic Tac Toe</h3>
           <p>Basic project to begin AP CS P</p>
+        </div>
+      </a>
+            <a class="project-card" href="/projects/swiftplaygrounds.html">
+        <img src="/assets/swift.png" alt="Swift Playground" loading="lazy" />
+        <div class="project-caption">
+          <h3>Learning Swift Playground</h3>
+          <p>Many Small Projects To Learn Swift</p>
         </div>
       </a>
     </div>
