--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="/">Home</a> |
   <a href="/projects/">Projects</a> |
   <a href="/documentation.html">Documentation</a> |
-  <a href="/big-ideas.html">Big Ideas</a> |
+  <a href="/big-ideas.html">Big Ideas</a> 
 </nav>
 
     <h2>About Me</h2>
