--- a/documentation.html
+++ b/documentation.html
@@ -9,7 +9,7 @@
   <a href="/">Home</a> |
   <a href="/projects/">Projects</a> |
   <a href="/documentation.html">Documentation</a> |
-  <a href="/big-ideas.html">Big Ideas</a> |
+  <a href="/big-ideas.html">Big Ideas</a> 
 </nav>
 
     <h2>My experience</h2>
