--- a/big-ideas.html
+++ b/big-ideas.html
@@ -12,6 +12,6 @@
   <a href="/">Home</a> |
   <a href="/projects/">Projects</a> |
   <a href="/documentation.html">Documentation</a> |
-  <a href="/big-ideas.html">Big Ideas</a> |
+  <a href="/big-ideas.html">Big Ideas</a> 
     </nav>
 
