--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -12,7 +12,7 @@
   <a href="/">Home</a> |
   <a href="/projects/">Projects</a> |
   <a href="/documentation.html">Documentation</a> |
-  <a href="/big-ideas.html">Big Ideas</a> |
+  <a href="/big-ideas.html">Big Ideas</a> 
     </nav>
 
     <h1>Scratch Tic Tac Toe</h1>
