--- a/projects/swiftplayground.html
+++ b/projects/swiftplayground.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Swift Playgrounds – Yamaç Özcan</title>
+  <link rel="stylesheet" href="/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+<body>
+  <div class="container">
+    <nav>
+      <a href="/">Home</a> |
+      <a href="/projects/">Projects</a> |
+      <a href="/documentation.html">Documentation</a> |
+      <a href="/big-ideas.html">Big Ideas</a>
+    </nav>
+
+    <h1>Swift Playgrounds</h1>
+
+    <img
+      src="/assets/swift.png"
+      alt="Swift Playgrounds screenshot"
+      style="width:100%; max-width:900px; border-radius:14px; box-shadow:0 8px 24px rgba(0,0,0,.08); display:block; margin:18px auto;"
+    />  
+
+    <h2>Learning Swift First Assignment</h2>
+    <p>
+      My journey in Swift Playgrounds started by making 9 squares in a 3x3 grid on the screen. Even if it seemed simple it was quite difficult for me to make 
+      and a simple calculator using two text fields and computed properties.
+    </p>
+    <img
+      src="/assets/swift.png"
+      alt="Swift Playgrounds screenshot"
+      style="width:100%; max-width:900px; border-radius:14px; box-shadow:0 8px 24px rgba(0,0,0,.08); display:block; margin:18px auto;"
+    />  
+
+    <h2>What I learned</h2>
+    <ul>
+    </ul>
+
+  <h2>Sample Codes</h2>
+
+    <p>
+      <a href="/projects/"
+         style="display:inline-block; margin-top:20px; padding:10px 20px; background:#007acc; color:#fff; border-radius:6px; text-decoration:none;">
+        ← Back to Projects
+      </a>
+    </p>
+  </div>
+</body>
+</html>
 
