--- a/projects/swiftplayground.html
+++ b/projects/swiftplayground.html
@@ -25,12 +25,25 @@
 
     <h2>Learning Swift First Assignment</h2>
     <p>
-      My journey in Swift Playgrounds started by making 9 squares in a 3x3 grid on the screen. Even if it seemed simple it was quite difficult for me to make 
-      and a simple calculator using two text fields and computed properties.
+      My journey in Swift Playgrounds started by making 9 squares in a 3x3 grid on the screen. Even if it seemed simple it was quite difficult for me to make.
     </p>
     <img
-      src="/assets/swift.png"
-      alt="Swift Playgrounds screenshot"
+      src="/assets/rectanglecode.png"
+      alt="Swift Playgrounds Rectangles"
+      style="width:100%; max-width:900px; border-radius:14px; box-shadow:0 8px 24px rgba(0,0,0,.08); display:block; margin:18px auto;"
+    />  
+    <p>
+    The code given above roughly shows the commands I used. Creating rectangles with Rectangle() and then using other commands like fill and frame to adjust the rectangles themselves.
+    I also used ZStack to add "X"s in the middle of the squares with other commands like Text and edited how they looked with commands like font and foregroundColor.
+    Additionally I learned about padding() to create empty space for better formating. This was the code I duplicated 9 times that we learned in class. However details about how to 
+    format the squares in the perfect 3x3 grid was left to us to find out. Using the offset modifier was the best way I could think of to move each square in any direction we want. 
+    I also found out about newer number types like CGFloat and "steps" to perfectly tune the amount of offset (I used 136 pixels per step in this example) for each square to make the best grid. 
+    Giving me the final result below.
+    </p>
+    
+    <img
+      src="/assets/rectangle.png"
+      alt="Swift Playground Rectangles"
       style="width:100%; max-width:900px; border-radius:14px; box-shadow:0 8px 24px rgba(0,0,0,.08); display:block; margin:18px auto;"
     />  
 
