--- a/projects/swiftplayground.html
+++ b/projects/swiftplayground.html
@@ -38,7 +38,7 @@
     Additionally I learned about padding() to create empty space for better formating. This was the code I duplicated 9 times that we learned in class. However details about how to 
     format the squares in the perfect 3x3 grid was left to us to find out. Using the offset modifier was the best way I could think of to move each square in any direction we want. 
     I also found out about newer number types like CGFloat and "steps" to perfectly tune the amount of offset (I used 136 pixels per step in this example) for each square to make the best grid. 
-    Giving me the final result below.
+    You can also watch the video below to see more.
     </p>
     
     <img
@@ -47,11 +47,11 @@
       style="width:100%; max-width:900px; border-radius:14px; box-shadow:0 8px 24px rgba(0,0,0,.08); display:block; margin:18px auto;"
     />  
 
-    <h2>What I learned</h2>
-    <ul>
-    </ul>
+  <h2>Moving On With Small Projects</h2>
 
-  <h2>Sample Codes</h2>
+    <p>
+    Continuing on I started learning about variables, number types, and more ways to play with text and interact with the user.
+    </p>
 
     <p>
       <a href="/projects/"
