--- a/projects/swiftplayground.html
+++ b/projects/swiftplayground.html
@@ -41,11 +41,21 @@
     You can also watch the video below to see more.
     </p>
     
-    <img
-      src="/assets/rectangle.png"
-      alt="Swift Playground Rectangles"
-      style="width:100%; max-width:900px; border-radius:14px; box-shadow:0 8px 24px rgba(0,0,0,.08); display:block; margin:18px auto;"
-    />  
+<div class="video-embed">
+  <iframe
+    src="https://drive.google.com/file/d/1yLPUXgeMBaCUMb9hKpYl5_k5LyYPgsM1/view?usp=sharing"
+    title="Swift Playgrounds First Assignment (Google Drive)"
+    allow="autoplay"
+    style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+  ></iframe>
+</div>
+
+<p class="video-fallback">
+  <a href="https://drive.google.com/file/d/1yLPUXgeMBaCUMb9hKpYl5_k5LyYPgsM1/view?usp=sharing"
+     target="_blank" rel="noopener"
+     style="display:inline-block;padding:10px 16px;background:#007acc;color:#fff;border-radius:6px;text-decoration:none;">
+    ▶ Watch the demo on Google Drive
+  </a> 
 
   <h2>Moving On With Small Projects</h2>
 
