--- a/projects/swiftplayground.html
+++ b/projects/swiftplayground.html
@@ -56,6 +56,11 @@
     <p>
     Continuing on I started learning about variables, number types, and more ways to play with text and interact with the user.
     </p>
+    <div class="gallery three">
+    <img src="/assets/favorites.png" alt="Favorite Things Project" />
+    <img src="/assets/swiftmenu.png" alt="Simple Menu Project" />
+    <img src="/assets/pic3.png" alt="..." />
+    </div>
 
     <p>
       <a href="/projects/"
