--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -46,10 +46,10 @@
     ▶ Watch the demo on Google Drive
   </a>
 </p>
-        <h2>Current Limitations and Possible Improvements</h2>
+        <h2>Version 1 Limitations and Possible Improvements</h2>
     <p>
       Of course this can't be the final version of this game. Obviously a system to detect when a straight or diagnol line of Xs or Os being formed would be required to call this a proper project.
-      It would also be important to not have to click twice just to put Os and for the game to recognize turns. For the time being the project still needs more improvement. 
+      It would also be important to not have to click twice just to put Os and for the game to recognize turns. Version 2 will work on these.
     </p>
 
     <iframe src="https://scratch.mit.edu/projects/1212297595/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
