--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -46,13 +46,26 @@
     ▶ Watch the demo on Google Drive
   </a>
 </p>
+    <h2>Version 1 Code and Playable Version 1</h2>
+    
+        <iframe src="https://scratch.mit.edu/projects/1212297595/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+  <div class="gallery two">
+  <img src="/assets/button.png" alt="XOX Button Code " />
+  <img src="/assets/xbutton.png" alt="X Victory Button Code" />
+  </div>
+
+    <p>
+     These are images of both the code of the sprites that control the winners, specifically the bottom left X button that when pressed restarts the game and gives a point to X and the
+      sprites which are actually played with and change between X and O the game can be acessed through the link:  <a https://scratch.mit.edu/projects/1212297595 </a> 
+    </p>
+    
         <h2>Version 1 Limitations and Possible Improvements</h2>
     <p>
       Of course this can't be the final version of this game. Obviously a system to detect when a straight or diagnol line of Xs or Os being formed would be required to call this a proper project.
       It would also be important to not have to click twice just to put Os and for the game to recognize turns. Version 2 will work on these.
     </p>
 
-    <iframe src="https://scratch.mit.edu/projects/1212297595/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
     <p>
       <a href="/projects/" style="display:inline-block; margin-top:20px; padding:10px 20px; background:#007acc; color:#fff; border-radius:6px; text-decoration:none;">
