--- a/projects/swiftplayground.html
+++ b/projects/swiftplayground.html
@@ -69,8 +69,24 @@
     <h2>Basic Calculator Project</h2>
 
     <p>
-    I combined the concepts I learned to create this extremely basic calculator on swift.
+    I combined the concepts I learned to create this extremely basic calculator on swift. A video explanation is given below.
     </p>
+
+    <div class="video-embed">
+  <iframe
+    src="https://drive.google.com/file/d/1R0MZPtFidbzJKbknqstI60RKfhEwqLs_/view?usp=sharing"
+    title="Swift Playgrounds Calculator (Google Drive)"
+    allow="autoplay"
+    style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+  ></iframe>
+</div>
+
+<p class="video-fallback">
+  <a href="https://drive.google.com/file/d/1R0MZPtFidbzJKbknqstI60RKfhEwqLs_/view?usp=sharing"
+     target="_blank" rel="noopener"
+     style="display:inline-block;padding:10px 16px;background:#007acc;color:#fff;border-radius:6px;text-decoration:none;">
+    ▶ Watch the demo on Google Drive
+  </a> 
     
     
     <p>
