--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -57,7 +57,15 @@
 
     <p>
      These are images of both the code of the sprites that control the winners, specifically the bottom left X button that when pressed restarts the game and gives a point to X and the
-      sprites which are actually played with and change between X and O the game can be acessed through the link:  <a https://scratch.mit.edu/projects/1212297595 </a> 
+      sprites which are actually played with and change between X and O.
+      <p>
+  Check it on Scratch:
+  <a href="https://scratch.mit.edu/projects/1212297595"
+     target="_blank" rel="noopener">
+    Tic Tac Toe on Scratch ↗
+  </a>.
+</p>
+
     </p>
     
         <h2>Version 1 Limitations and Possible Improvements</h2>
